Add Sprint Review page with transcribed demo analysis, team reviews, and exec input

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <span id="currentExecName">Select User</span>
                     <button id="changeExec" class="btn-small">Change</button>
                 </div>
+                <a href="sprint-review.html" class="btn-admin" style="background:rgba(99,102,241,0.15);border-color:rgba(99,102,241,0.3);color:#6366f1;">🚀 Sprint Review</a>
                 <a href="admin.html" class="btn-admin">🔐 Admin Dashboard</a>
             </div>
         </header>
